<resources>
    <string name="app_name">CARB</string>
    <string name="action_settings">Configuração</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_calibragem">CalibragemActivity</string>
    <string name="main_act_dialog_titulo">Informe o Dispositivo que será configurado. Ex: Tv da Sala</string>
    <string name="main_act_dialog_erro_spinner">Você precisa especificar o Instrumento</string>
    <string name="main_act_dialog_erro_nome">Você precisa especificar o nome do dispositivo</string>
    <string name="main_act_dialog_titulo_editar">Modifique o Dispositivo configurado.</string>
    <string name="calibragem_act_dialog_titulo">Informe os dados do Instrumento</string>
    <string name="calibragem_act_dialog_erro_titulo">Você precisa especificar o titulo</string>
    <string name="calibragem_act_dialog_erro_spinner">Você precisa especificar o Instrumento</string>
    <string name="calibragem_act_dialog_erro_audio">Você precisa especificar o valor do Audio</string>
    <string name="calibragem_act_dialog_erro_video">Você precisa especificar o valor do Video</string>
    <string name="calibragem_act_dialog_titulo_editar">Modifique os dados do Instrumento</string>
    <string name="atualizado_em__">"Atualizado em: "</string>
    <string name="excluir">Excluir</string>
    <string name="dialog_msg_excluir_item">Deseja realmente excluir o item: \'</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="audio_til__">"Audio ~ "</string>
    <string name="_ms">" ms"</string>
    <string name="video_til__">"Video ~ "</string>
    <string name="constante_dispositivo">dispositivo</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="audio__">Audio:</string>
    <string name="video__">Vídeo:</string>
    <string name="mock000000">000000</string>
    <string name="criado_em__">Criado em:</string>
    <string name="mock_00_00_0000__00_00_00">00/00/0000 00:00:00</string>
    <string name="nome_do_dispositivo">Nome do Dispositivo</string>
    <string name="hint_audio">Audio</string>
    <string name="hint_video">Video</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hint_titulo">Título</string>
    <string name="hint_descricao">Descrição</string>
    <string name="hint_nome_dispositivo">Nome do Dispositivo</string>
    <string name="continuar">Continuar</string>
    <string name="media">MED:</string>
    <string name="mock_titulo">Titulo</string>
    <string name="mock_audio_ms">Audio > 000 ms</string>
    <string name="mock_video_ms">Video > 000 ms</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_detalhes">Detalhes</string>
    <string name="menu_configurar">Configurar</string>
    <string name="menu_sobre">Sobre o CARB</string>

    <string name="array_dispositivo___">Dispositivo...</string>
    <string name="array_tv_crt">TV CRT</string>
    <string name="array_tv_wide">TV Wide</string>
    <string name="array_home_theater">Home Theater</string>
    <string name="array_caixa_acustica">Caixa Acústica</string>
    <string name="array_fone_de_ouvido">Fone de Ouvido</string>
    <string name="array_instrumento___">Instrumento...</string>
    <string name="array_guitarra">Guitarra</string>
    <string name="array_guitarra_pro">Guitarra Pro</string>
    <string name="array_baixo">Baixo</string>
    <string name="array_baixo_pro">Baixo Pro</string>
    <string name="array_bateria">Bateria</string>
    <string name="array_bateria_avancada">Bateria Avançado</string>
    <string name="array_bateria_pro">Bateria Pro</string>
    <string name="array_vocal">Vocal</string>
    <string name="array_vocal_grupo">Vocal Grupo</string>
    <string name="array_teclado">Teclado</string>
    <string name="array_teclado_avancado">Teclado Avançado</string>
    <string name="array_teclado_pro">Teclado Pro</string>
    <string name="array_controle">Controle</string>
    <string name="array_tapete_danca">Tapede Dança</string>
    <string name="array_teclado_pc">Teclado PC</string>

</resources>
