<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/cardDispositivo"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="8dp">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/ivTipoDispositivo"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/instrument_guitar"
                android:layout_marginRight="8dp"/>

            <Button
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/btnMenuDispositivo"
                style="?buttonBarNegativeButtonStyle"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:background="@drawable/ic_dots_vertical_black_24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/nome_do_dispositivo"
                android:id="@+id/tvNomeDispositivo"
                android:maxLength="15"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_alignTop="@+id/btnMenuDispositivo"
                android:layout_toRightOf="@+id/ivTipoDispositivo"
                android:layout_toLeftOf="@+id/btnMenuDispositivo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/audio__"
                android:id="@+id/tvLabelAudio"
                android:layout_below="@+id/tvNomeDispositivo"
                android:layout_toRightOf="@+id/ivTipoDispositivo"
                android:layout_toEndOf="@+id/ivTipoDispositivo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mock000000"
                android:id="@+id/tvValorAudio"
                android:layout_alignTop="@+id/tvLabelAudio"
                android:layout_toRightOf="@+id/tvLabelAudio"
                android:layout_toEndOf="@+id/tvLabelAudio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_ms"
                android:singleLine="true"
                android:id="@+id/tvLabelMS1"
                android:layout_alignTop="@+id/tvValorAudio"
                android:layout_toRightOf="@+id/tvValorAudio"
                android:layout_toEndOf="@+id/tvValorAudio" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/video__"
                android:id="@+id/tvLabelVideo"
                android:layout_below="@+id/tvLabelAudio"
                android:layout_toRightOf="@+id/ivTipoDispositivo"
                android:layout_toEndOf="@+id/ivTipoDispositivo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mock000000"
                android:id="@+id/tvValorVideo"
                android:layout_alignTop="@+id/tvLabelVideo"
                android:layout_toRightOf="@+id/tvLabelVideo"
                android:layout_toEndOf="@+id/tvLabelVideo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_ms"
                android:singleLine="true"
                android:id="@+id/tvLabelMS2"
                android:layout_alignTop="@+id/tvValorVideo"
                android:layout_toRightOf="@+id/tvValorVideo"
                android:layout_toEndOf="@+id/tvValorVideo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/criado_em__"
                android:ellipsize="end"
                android:singleLine="true"
                android:id="@+id/tvLabelDataCriacao"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/tvDataCriacao"
                android:layout_toStartOf="@+id/tvDataCriacao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mock_00_00_0000__00_00_00"
                android:ellipsize="end"
                android:singleLine="true"
                android:id="@+id/tvDataCriacao"
                android:layout_alignBottom="@+id/tvLabelDataCriacao"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
