<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputDescricaoCalibragem"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spnDispositivo"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputNomeDispositivo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNomeDispositivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_nome_dispositivo"
                android:inputType="textPersonName|textMultiLine"
                android:maxLength="140"
                android:maxLines="2" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSalvarDispositivo"
        style="?buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="16dp"
        android:text="@string/continuar" />

    <Button
        android:id="@+id/btnCancelarDispositivo"
        style="?buttonBarNegativeButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/btnSalvarDispositivo"
        android:layout_toStartOf="@+id/btnSalvarDispositivo"
        android:text="@string/cancelar" />


</RelativeLayout>
