<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/rolamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputTituloCalibragem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etTituloCalibragem"
                    android:hint="@string/hint_titulo"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:imeOptions="actionNext"
                    android:imeActionId="@+id/etDescricaoCalibragem"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputDescricaoCalibragem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputTituloCalibragem"
                android:layout_marginTop="8dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etDescricaoCalibragem"
                    android:hint="@string/hint_descricao"
                    android:inputType="textMultiLine|textPersonName"
                    android:maxLength="60"
                    android:maxLines="2"
                    android:imeOptions="actionNext"
                    android:imeActionId="@+id/etAudioCalibragem"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputDescricaoCalibragem"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout"
                android:layout_marginTop="8dp">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spnInstrumento"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputAudioCalibragem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/etAudioCalibragem"
                        android:hint="@string/hint_audio"
                        android:inputType="numberSigned"
                        android:maxLength="4"
                        android:imeOptions="actionNext"
                        android:imeActionId="@+id/etVideoCalibragem"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputVideoCalibragem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/etVideoCalibragem"
                        android:hint="@string/hint_video"
                        android:inputType="numberSigned"
                        android:maxLength="4"
                        android:imeOptions="actionDone"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/painel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/rolamento">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btnCancelarCalibragem"
            style="?buttonBarNegativeButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/btnSalvarCalibragem"
            style="?buttonBarPositiveButtonStyle"
            />

    </LinearLayout>
</RelativeLayout>

