<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardCalibragem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/ivTipoCalibragem"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/instrument_guitar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTituloCalibragem"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/titulo"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <Button
                            android:id="@+id/btnMenuCalibragem"
                            style="?buttonBarNegativeButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:background="@drawable/ic_dots_vertical_black_48dp"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvDescricaoCalibragem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="@string/descricao"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvLabelAudio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/audio__"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/tvValorAudio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:ellipsize="end"
                                android:maxLength="6"
                                android:singleLine="true"
                                android:text="@string/mock000000"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/tvLabelMS1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/_ms"
                                android:textAppearance="?android:attr/textAppearanceMedium" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvLabelVideo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/video__"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/tvValorVideo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp"
                                android:ellipsize="end"
                                android:maxLength="6"
                                android:singleLine="true"
                                android:text="@string/mock000000"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <TextView
                                android:id="@+id/tvLabelMS2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text="@string/_ms"
                                android:textAppearance="?android:attr/textAppearanceMedium" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:id="@+id/tvLabelDataCriacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="4dp"
                    android:layout_toLeftOf="@+id/tvDataCriacao"
                    android:layout_toStartOf="@+id/tvDataCriacao"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/criado_em__"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvDataCriacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/tvLabelDataCriacao"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/mock_00_00_0000__00_00_00"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
